changed showing "phone menu" by hover on phone icon in Header

--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -32,7 +32,7 @@
   }
 }
 
-// .icon--phone:hover + .phone {
-//   opacity: 1;
-//   transform: translateY(55%);
-// }
+.icon--phone:hover + .phone {
+  opacity: 1;
+  transform: translateY(55%);
+}
